--- a/index.html
+++ b/index.html
@@ -2,16 +2,24 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Project Odin - Recipes</title>
+        <title>Project Odin|Recipes</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
-            
+            <nav>
+                <a class="flex-container" href="#">
+                    <img src="images/logo.png" alt="Project Odin logo" style="width: 112px">
+                    <h2 style="font-family: 'Caesar Dressing', cursive;">The Odin Project</h1>
+                </a>
+            </nav>      
         </header>
-        <main>
+        <main class="main-container">
             <h1>Odin Recipes</h1>
-            
-            <a href="recipes/Taameya.html">Ta'ameya (Egyptian Falafel)</a>
+            <img src="images/salt-play.jpg" alt="Unknown person throwing salt in the food" style="width: 440px">
+            <a href="#">Awesome Egg Sandwich</a>
+            <a href="#">The wonderful Buttered Saltine Crackers with Coffee</a>
+            <a href="#">The delicious Banana with powdered milk</a>
         </main>
         <footer>
 
