--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Project Odin|Recipes</title>
+        <title>The Odin Project | Recipes</title>
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
